# gamagama-core

./: README.md  pyproject.toml
src/gamagama/core/: __init__.py  dice_engine.py  game_system.py
