[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gamagama-core"
version = "0.1.0"
description = "Core abstractions for gamagama game system plugins."
requires-python = ">=3.9"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
